<resources>
    <string name="app_name">finalApp</string>
    <string name="title">"LA VIE EN ROSE"</string>
    <string name="input">Input the keywords</string>
    <string name="Searchch">SEARCH NOW</string>
    <string name="menu">MBM ranking</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Top_moviess">Top Movies</string>
    <string name="top_books">TOP  BOOKS</string>
    <string name="checkbooks">TOP BOOKS</string>
    <string name="top_Movies">TOP MOVIES</string>
    <string name="booktitle">TOP 20 BOOKS</string>
    <string name="fromwhere">——from WeChat Reading</string>
    <string name="movietitle">TOP 25 MOVIES</string>
    <string name="fromwheree">——FROM DOUBAN</string>
    <string name="answerrr">SEARCH RESULT</string>
    <string name="topTVSe">TOP 25 TV SERIES</string>
    <string name="tvfromwheree">——FROM DOUBAN</string>
    <string name="addSth">AddSth</string>
    <string name="adddsth">ADD WISH LIST</string>
    <string name="datee">DATE</string>
    <string name="typee">TYPE</string>
    <string name="add_name">NAME</string>
    <string name="notes">NOTES</string>
    <string name="addsthhh">ADD WISH LIST</string>
    <string name="showwish">SHOW WISH LIST</string>
    <string name="wishList">WISH LIST</string>
    <string name="input2">input the title</string>
    <string name="input3">input the notes</string>
    <string name="open_List">OPEN LIST</string>
    <string name="start">START</string>
    <string name="addto">ADD TO THE LIST</string>
    <string name="labell">benZhenAPP</string>
    <string name="main_Title"><![CDATA[iMovie & iEnjoy]]></string>

</resources>
