<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F6DCCE"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:gravity="center"
        android:shadowColor="#CEE8F6"
        android:text="@string/title"
        android:textColorHighlight="#314A43"
        android:textSize="35dp"
        android:textStyle="bold"
        android:typeface="serif" />

    <EditText
        android:id="@+id/keyWord"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:hint="@string/input" />

    <Button
        android:id="@+id/button3"

        android:shadowColor="#314A43"
        android:textColor="#737C7B"
        android:onClick="openOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Searchch" />










</LinearLayout>