<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="#F0D3CF"
    tools:context=".Add_sthActivity">

    <TextView
        android:id="@+id/addTitle"
        android:layout_width="match_parent"
        android:layout_height="75sp"
        android:background="#C098A4"

        android:gravity="center"
        android:text="@string/adddsth"
        android:textSize="38sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <TextView

            android:id="@+id/datemm"

            android:layout_width="93dp"
            android:layout_height="46dp"
            android:background="#E08B70"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/datee" />

        <EditText
            android:id="@+id/dateTo"
            android:layout_width="191dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:gravity="center" />

        <Button
            android:id="@+id/chooseDate"
            android:layout_width="42dp"
            android:layout_height="45dp"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"

            android:background="@drawable/date"
            android:onClick="onclick" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <TextView



            android:id="@+id/Typee"
            android:layout_width="93dp"
            android:layout_height="46dp"
            android:background="#E08B70"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/typee" />


        <Spinner
            android:layout_marginLeft="10dp"
            android:id="@+id/hisp"
            android:background="#CDA7A9"

            android:layout_width="250dp"
            android:layout_height="40dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <TextView


            android:id="@+id/namee"
            android:layout_width="93dp"
            android:layout_height="46dp"
            android:background="#E08B70"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/add_name" />

        <EditText
            android:id="@+id/itsok"
            android:layout_width="250dp"
            android:layout_height="46dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"

            android:hint="@string/input2" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <TextView


            android:id="@+id/notes"
            android:layout_width="93dp"
            android:layout_height="46dp"
            android:background="#E08B70"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/notes" />

        <EditText
            android:id="@+id/thatsalright"
            android:layout_width="250dp"
            android:layout_height="46dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"

            android:hint="@string/input3" />


    </LinearLayout>

    <Button
        android:id="@+id/button6"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="#E08B70"

        android:gravity="center"

        android:onClick="onOpen"
        android:text="Button" />


</LinearLayout>




