<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0D3CF"

    android:orientation="vertical"
    tools:context=".add_pageActivity">


    <TextView
        android:id="@+id/addTitle"
        android:layout_width="match_parent"
        android:layout_height="75sp"
        android:background="#C098A4"

        android:gravity="center"
        android:text="@string/adddsth"
        android:textSize="38sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <TextView

            android:id="@+id/datemm"

            android:layout_width="93dp"
            android:layout_height="46dp"
            android:background="#E08B70"
            android:gravity="center"
            android:textSize="25sp"
            tools:text="@string/datee" />

        <EditText
            android:id="@+id/dateTo"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:gravity="center" />

        <Button
            android:id="@+id/chooseDate"
            android:layout_width="51dp"
            android:layout_height="46dp"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"

            android:background="@drawable/date"
 />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <TextView



            android:id="@+id/Typee"
            android:layout_width="93dp"
            android:layout_height="46dp"
            android:background="#E08B70"
            android:gravity="center"
            android:textSize="25sp"
            tools:text="@string/typee" />

        <EditText


            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:id="@+id/typetoadd"
            android:layout_width="250dp"
            android:layout_height="46dp"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <TextView


            android:id="@+id/namee"
            android:layout_width="93dp"
            android:layout_height="46dp"
            android:background="#E08B70"
            android:gravity="center"
            android:textSize="25sp"
            tools:text="@string/add_name" />

        <EditText


            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:id="@+id/nametoadd"
            android:layout_width="250dp"
            android:layout_height="46dp"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <TextView


            android:id="@+id/notes"
            android:layout_width="93dp"
            android:layout_height="46dp"
            android:background="#E08B70"
            android:gravity="center"
            android:textSize="25sp"
            tools:text="@string/notes" />

        <EditText


            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:id="@+id/notestoadd"
            android:layout_width="250dp"
            android:layout_height="46dp"/>


    </LinearLayout>

    <Button
        android:id="@+id/button6"
        android:layout_marginTop="30dp"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:layout_gravity="center"

        android:background="#E08B70"

        android:text="Button" />


</LinearLayout>